tests/importer/kube/warnings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: staging
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: app
          image: registry.example.com/checkout:latest
          ports:
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9000
        - name: envoy
          image: envoyproxy/envoy:v1
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: checkout
  ports:
    - name: http
      port: 80
      targetPort: 9000
